--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="container">
         <div class="logo">
-            <img src="Ardent creatives-16.png" alt="logo" style="width: 10vw;">
+            <img src="assest/Ardent creatives-16.png" alt="logo" class="img">
         </div>
         <div class="progress-container">
             <div class="progress-bar"></div>
