--- a/index2.html
+++ b/index2.html
@@ -65,7 +65,7 @@
       <div class="text2"><p>Our websites look great, but each page has a clearly defined conversion goal.</p></div>
      </div>
      <div class="section3">
-      <h3 class="graphico" style="">Graphics Design</h3>
+      <h3 class="graphics" style="font-size: 17px; text-transform: capitalize;">Graphics Design</h3>
       <div class="text3"><p>We interlace our creative with solid marketing and branding principles. A strong brand. </p></div>
      </div>
  </div>
@@ -122,7 +122,7 @@
   <div class="random">
     <div class="random2">
       <div class="random-con1">
-        <div class="icon"><span class="material-symbols-outlined" style="" id="material-symbols-outlined">
+        <div class="icon"><span class="material-symbols-outlined" style="color: #898989; font-size: 55px;">
           desktop_mac
           </span>
         <h3 class="num">150</h3>
@@ -131,7 +131,7 @@
           <p class="Happy">Happy Clients</p>
       </div>
       <div class="random-con2">
-        <div class="icon"><span class="material-symbols-outlined" id="material-symbols-outlined" style="">
+        <div class="icon"><span class="material-symbols-outlined" style="color: #898989; font-size: 55px;">
           laptop_mac
           </span>
           <h3 class="num">650</h3>
@@ -141,7 +141,7 @@
   
       </div>
       <div class="random-con3">
-        <div class="icon"><span class="material-symbols-outlined" id="material-symbols-outlined">
+        <div class="icon"><span class="material-symbols-outlined" style="color: #898989; font-size: 55px;">
           sms
           </span>
           <h3 class="num">500</h3>
@@ -167,32 +167,33 @@
         <p><a href="">Brochure</a></p>
       </div>
       <div id="all">
-        <img src="Ardent creative2b-13.png" alt="Design" class="br-img"    style="" id="myImg">
+        <img src="Ardent creative2b-13.png" alt="Design" class="br-img" id="myImg">
         <div id="myModal" class="modal">
          <span class="close">&times;</span>
           <img class="modal-content" id="img01">
            <div id="caption"></div>
         </div>
 
-        <img src="replica.jpg" alt="" style="" class="br-img2" id="myImg01">
+        <img src="replica.jpg" alt="" class="br-img2" id="myImg01">
         <div id="myModal01" class="modal01">
          <span class="close2">&times;</span>
           <img class="modal-content01" id="img02">
            <div id="caption01"></div>
         </div>
-        <img src="Ardent creative2b-11.png" alt="" class="br-img3" style="" id="myImg02">
+        <img src="Ardent creative2b-11.png" alt="" class="br-img3" id="myImg02">
         <div id="myModal02" class="modal02">
          <span class="close3">&times;</span>
           <img class="modal-content02" id="img03">
            <div id="caption02"></div>
         </div>
-        <img src="cap-replica.jpg" alt="" class="br-img4" id="myImg03">
+        <img src="cap-replica.jpg" alt="" class="br-img4"  id="myImg03">
         <div id="myModal03" class="modal03">
          <span class="close4">&times;</span>
           <img class="modal-content03" id="img04">
            <div id="caption03"></div>
         </div>
       </div>
+  </div>
       <div id="skills">
         <div class="skill">
           <h3 class="text-skill">We provide high quality and cost effective services.</h3>
@@ -216,6 +217,7 @@
 
         </div>
       </div>
+      
       
       <div id="ourteam">
         <h2 class="ourteam">Our Team</h2>
@@ -270,7 +272,7 @@
               </div>
             </div>
             <div class="Email">
-              <div class="callicon" id="msgcon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg></div>
+              <div class="callicon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg></div>
               <div class="phonetxt">
                 <p class="emailtext">Email Address</p>
                 <div class="number"><a href="mailto: ardentcreativeshub@gmail.com">ardentcreativeshub@gmail.com </a> </div>
@@ -278,7 +280,7 @@
             </div>
   
             <div class="Email">
-              <div class="callicon" id="msgcon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg></div>
+              <div class="callicon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#ffffff" d="M48 64C21.5 64 0 85.5 0 112c0 15.1 7.1 29.3 19.2 38.4L236.8 313.6c11.4 8.5 27 8.5 38.4 0L492.8 150.4c12.1-9.1 19.2-23.3 19.2-38.4c0-26.5-21.5-48-48-48L48 64zM0 176L0 384c0 35.3 28.7 64 64 64l384 0c35.3 0 64-28.7 64-64l0-208L294.4 339.2c-22.8 17.1-54 17.1-76.8 0L0 176z"/></svg></div>
               <div class="phonetxt">
                 <p class="email">Email</p>
                 <div class="number"><a href="mailto: ardentcreativeshub@gmail.com">ardentcreativeshub@gmail.com </a> </div>
